src/view/snapshots/tvision_rs__view__group__tests__group_surface_pane_focused.snap
---
source: src/view/group.rs
expression: "shot(&mut root, true)"
---
size: 12x6
cursor: hidden
text:
|            |
|  CCCC      |
|  CCCC      |
|            |
|            |
|            |
attr:
|............|
|..aaaabbbb..|
|..aaaabbbb..|
|..bbbbbbbb..|
|..bbbbbbbb..|
|............|
legend:
  . default
  a fg=BIOS(15) bg=BIOS(1)
  b fg=BIOS(0) bg=BIOS(3)
