src/view/snapshots/tvision_rs__view__group__tests__group_surface_pane_unfocused.snap
---
source: src/view/group.rs
expression: "shot(&mut root, false)"
---
size: 12x6
cursor: hidden
text:
|            |
|  CCCC      |
|  CCCC      |
|            |
|            |
|            |
attr:
|............|
|..aaaabbbb..|
|..aaaabbbb..|
|..bbbbbbbb..|
|..bbbbbbbb..|
|............|
legend:
  . default
  a fg=BIOS(15) bg=BIOS(1)
  b fg=BIOS(8) bg=BIOS(0)
